--- a/paDashboard.html
+++ b/paDashboard.html
@@ -125,6 +125,7 @@
                 );  
                 /* top right bottom left */
                 margin: 0% 2.5% 0% 2.5%; 
+                padding: 0% 5% 0% 5%;
             }
 
             .column-1 input:checked ~ .collapsible-message{
@@ -136,7 +137,7 @@
                 );                  
                 width: 95%;
                 top: 0;
-                transition: all 10s ease;
+                transition: all 5s linear;
 
             }
             
